# arcOS

./: README.md  meson.build  run.sh
Devicetree/arm64/qemu/: virt.dts
Drivers/: Core.cc  UART-PL011.cc  meson.build
Kernel/: Alloc.cc  Exception.S  Init.cc  Makefile  Printk.cc  Startup.S  arm64.ld  meson.build  private.h
Lib/: meson.build
Lib/DT/: Core.cc  meson.build
cross/: aarch64.txt
include/: Arc.h  config.h
include/Arc/: endian.h  memory.h  mmio.h  printk.h  stdint.h  vector.h
include/Drivers/: Core.h  UART.h
include/asm/: macro.h
